tests/baselines/reference/es5SetterparameterDestructuringNotElided.errors.txt
tests/cases/compiler/es5SetterparameterDestructuringNotElided.ts(2,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/compiler/es5SetterparameterDestructuringNotElided.ts (1 errors) ====
    const foo = {
        set foo([start, end]: [any, any]) {
            ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
            void start;
            void end;
        },
    };